--- a/index.html
+++ b/index.html
@@ -3,13 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title></title>
-		<script type="module">
-			import {Module1} from "./Module1.js";
-
-			const m1=new Module1();
-			window.alert(m1.func());
-
-		</script>
+		<script src="./script.js"></script>
 	</head>
 	<body></body>
 </html>
