--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title></title>
-		<script src="./script.js"></script>
+		<script src="./script.js" type="module"></script>
 	</head>
 	<body></body>
 </html>
